# windys-modeling-agency

./: CMakeLists.txt  LICENSE  README.md
Shaders/: fragmentShader.frag  vertexShader.vert
Unfinished/: Banana.blend  Banana.glb  Bluehexagon.glb  Bombard.blend  Fork.blend  Fridge.blend  Fridge.blend1  Fridge.glb  GreenHexagon.glb  JpurneyStart.blend  JpurneyStart.glb  JpurneyStart.mtl  Knife.blend  Knife.glb  Lance.blend  MeatTenderizer.blend  MeatTenderizer.glb  Plate.blend  Plate.glb  PurpleHexagon.glb  RedHexagon.glb  Scimitar-1stAttempt.blend  Spoon.glb  Strawberry.blend  Strawberry.glb  Toaster.blend  Toaster.glb  TowerStart.blend  chair-1stattempt.blend  hexagon.blend
Unfinished/StandInModels/: Banana.glb  CoffeeMachine.glb  Mushroom.glb
include/glad/: glad.h
src/: Helper.cpp  Helper.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  glad.c  json.hpp  main.cpp  stb_image.h  tiny_gltf.h
